java-module: Remove sequence from OpenSearch
